# zhongxi

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: postStart.sh
config/: fastdds_config.xml
install/: local_setup.sh  setup.sh
install/demo_py/lib/demo_py/: talker
install/demo_py/share/demo_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/graphslam/include/graphslam/slam2d/: map.h
install/graphslam/lib/graphslam/: graphslam_g2o
install/graphslam/share/graphslam/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/graphslam/share/graphslam/cmake/: graphslamConfig.cmake
install/sensor_interfaces/include/sensor_interfaces/: control_board_interface.h  stm32_protocol.h
install/sensor_interfaces/lib/sensor_interfaces/: lidar_driver
install/sensor_interfaces/share/sensor_interfaces/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
install/sensor_interfaces/share/sensor_interfaces/launch/: full_system.launch.py  sensors.launch.py
install/zhongxi_description/share/zhongxi_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/zhongxi_description/share/zhongxi_description/launch/: display.launch  gazebo.launch
install/zhongxi_description/share/zhongxi_description/urdf/: zhongxi_description_enhanced.sdf
learning/: bin_目录分析.md  build_目录分析.md  config_目录分析.md  install_目录分析.md  log_目录分析.md  tools_目录分析.md  tutorials_目录分析.md  zhongxi_learning_guide.md  zhongxi_项目总览.md
learning/simulations_解读/: README_md_文件分析.md  env_目录分析.md  gazebo_local_目录分析.md  launch_目录分析.md  packages_目录分析.md  rviz_目录分析.md  scripts_目录分析.md  simulations_根目录分析.md  worlds_目录分析.md
learning/src_解读/: back_end.cpp_详细分析.md  build_目录分析.md  camera_driver.cpp_详细分析.md  demo_py_包分析.md  front_end.cpp_详细分析.md  graphslam_目录分析.md  install_目录分析.md  lidar_driver.cpp_详细分析.md  log_目录分析.md  map.cpp_详细分析.md  sensor_interfaces_目录分析.md  utils.cpp_详细分析.md  zhongxi_description_文件分析.md
learning/src_解读/graphslam_解读/: GraphSLAM项目源码分析.md
learning/src_解读/graphslam_解读/src_解读/: graphslam_build_debug_目录分析.md  graphslam_build_目录分析.md  graphslam_config_目录分析.md  graphslam_include_目录分析.md  graphslam_install_目录分析.md  graphslam_launch_目录分析.md  graphslam_源码分析.md
log/: latest_build
simulations/env/: rviz2.env
simulations/launch/: riz_only.launch.py
simulations/rviz/: default.rviz
simulations/scripts/: run_rviz2.sh
simulations/worlds/: zhongxi.sdf
src/GraphSLAM/: CMakeLists.txt  main_window.cpp  main_window.h  slam2d_g2o.cpp  slam2d_viewer.cpp  slam2d_viewer.h
src/GraphSLAM/include/utils/: laser_scan.h
src/GraphSLAM/src/slam2d/: back_end.cpp  utils.cpp
src/demo_py/: setup.cfg  setup.py
src/graphslam/: CMakeLists.txt  COMPILATION_FIX.md  USAGE.md  build_jetson.sh  check_deps.sh  diagnose_issue.sh  explore_node.py  fix_compilation.sh  fix_node_file.sh  main_window.cpp  main_window.h  main_window.ui  map_manager_node.cpp  map_saver_node.cpp  package.xml  project_analysis.sh  real_robot_mapping_guide.sh  slam2d_node_template.cpp  smart_explore_node.py
src/graphslam/build_debug/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/graphslam/build_debug/ament_cmake_core/: package.cmake
src/graphslam/build_debug/ament_cmake_core/stamps/: package.xml.stamp
src/graphslam/build_debug/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh
src/graphslam/build_debug/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
src/graphslam/build_debug/graphslam_g2o_autogen/: moc_predefs.h
src/graphslam/build_debug/graphslam_g2o_autogen/EWIEGA46WW/: moc_main_window.cpp  moc_main_window.cpp.d
src/graphslam/build_debug/graphslam_node_autogen/: moc_predefs.h
src/graphslam/config/: rviz_config_with_path.rviz
src/graphslam/include/slam2d/: back_end.h  front_end.h  types.h  utils.h
src/graphslam/include/slam2d/utils/: camera_model.h  transformations.h
src/graphslam/include/utils/: transformations.h
src/graphslam/install/: local_setup.sh  setup.sh
src/graphslam/install/GraphSLAM/share/GraphSLAM/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/graphslam/launch/: slam_exploration.launch.py  slam_with_robot.launch.py
src/graphslam/src/node/: graphslam_node.cpp
src/graphslam/src/slam2d/: back_end.cpp  front_end.cpp  map.cpp  utils.cpp
src/graphslam/src/utils/: laser_scan.cpp  transformations.cpp
src/install/: local_setup.sh  setup.sh
src/sensor_interfaces/: CMakeLists.txt  INTEGRATION_NOTES.md  README.md
src/sensor_interfaces/config/: camera_params.yaml  control_params.yaml  lidar_params.yaml  ydlidar_x3pro.yaml
src/sensor_interfaces/include/sensor_interfaces/: camera_interface.h  control_board_interface.h  lidar_interface.h  sensor_interfaces.h  stm32_comms_manager.h  stm32_protocol.h
src/sensor_interfaces/launch/: full_system.launch.py  sensors.launch.py
src/sensor_interfaces/sdk/: ydlidar_config.h
src/sensor_interfaces/src/: camera_driver.cpp  control_board_interface.cpp  lidar_driver.cpp  sensor_interfaces.cpp  stm32_comms_manager.cpp
src/zhongxi_description/: CMakeLists.txt  package.xml
src/zhongxi_description/launch/: gazebo_sim.launch.py  ign_gazebo.launch.py  simple_view.launch.py  view_robot.launch.py
src/zhongxi_description/meshes/: base_link.STL  camera_link.STL  laser_link.STL
src/zhongxi_description/urdf/: zhongxi_description.csv  zhongxi_description.sdf  zhongxi_description.urdf  zhongxi_description_enhanced.urdf
tools/: recovery
tutorials/: BUILD_INSTRUCTIONS.md  GAZEBO_SIMULATION_GUIDE.md  USAGE.md  X11_CONFIGURATION_REPORT.md  preCMakeLists.txt
tutorials/algorithm/: DifferentialDriveModel.md  FeatureMapManagement.md  FeatureMatching.md  FrontierExploration.md  GraphOptimization.md  ICP.md  LoopDetection.md  MotionCompensation.md  README.md  RayTracing.md  ShortestPathCoverage.md  TrajectorySmoothing.md  algorithm.md
(+2 files in other folders)
