<?xml version="1.0"?>
<package format="3">
  <name>zhongxi_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for zhongxi_description</p>
    <p>This package contains configuration data, 3D models and launch files for zhongxi_description robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>
  
  <exec_depend>ros2launch</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>